# bmp388-embedded

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: async.rs  bmp388.rs  calibration.rs  error.rs  lib.rs  registers.rs  types.rs
tests/: async.rs  sync.rs
