[package]
name = "bmp388-embedded"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Flahardy"]
license = "MIT"
description = "no_std embedded-hal driver for the BMP388 barometric pressure and temperature sensor (with optional async support)."
repository = "https://github.com/trevorflahardy/bmp388-embedded"
keywords = ["embedded-hal", "i2c", "bmp388", "pressure", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
# Enable async I2C + delay support via embedded-hal-async.
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", default-features = false, features = ["eh1"] }
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
lto = true
